# chemometrics_vibe_coding_public

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml
.beads/: issues.jsonl
.claude/: settings.json
.claude/skills/chemometrics-hybrid-modeling/: SKILL.md
.claude/skills/chemometrics-hybrid-modeling/references/: application-examples.md  approaches.md
.claude/skills/chemometrics-ml-selection/: SKILL.md
.claude/skills/chemometrics-ms-metabolomics/: SKILL.md
.claude/skills/chemometrics-shared/: SKILL.md
.claude/skills/chemometrics-validation/: SKILL.md
.claude/skills/quarto-authoring/: SKILL.md
.github/: BRANCH_PROTECTION_SETUP.md  PULL_REQUEST_TEMPLATE.md  SECURITY_REVIEW.md
.github/workflows/: deploy-book.yml  release-book.yml  tests.yml
data/: DATASETS_AND_PROMPTS.md
data/CD-MRG-metabolomics_summerschool_2023/: REPRODUCTION_GUIDE.md  plan.md  plan_phase6.md  prompt.md
docs/: CHECKPOINTS.md
examples/: CLAUDE.md
presentation/: custom.scss  workshop_presentation.qmd
prompts/: 0_workshop_objectives_final_state.md
reports/: _quarto.yml  biomarkers_tutorial.qmd  build.sh  drug_detection_tutorial.qmd  eda_tutorial.qmd  index.qmd  location_comparison_tutorial.qmd  multivariate_tutorial.qmd  preprocessing_tutorial.qmd  references.bib
reports/presentation/: _quarto.yml  workshop_presentation.qmd
src/: biomarkers.py  drug_detection.py  eda.py  location_comparison.py  multivariate.py  preprocessing.py
tests/: test_biomarkers.py  test_eda.py  test_location_comparison.py  test_multivariate.py
(+12 files in other folders)
