[project]
name = "chemometrics-vibe-coding"
version = "0.1.0"
description = "Chemometrics vibe coding template"
requires-python = ">=3.9"
dependencies = [
    "great-tables>=0.20.0",
    "itables>=2.7.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "plotly>=5.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.0",
]
